# droniada23

./: .gitignore  pyproject.toml
droniada23/: run_drzewko.py  run_rura.py
droniada23/common/actors/: camera_actor.py  firebase_actor.py  logger_actor.py  telem_actor.py
droniada23/common/conf/: config.yaml
droniada23/common/conf/camera/: mavic.yaml
droniada23/common/data/: stamped_frame.py  telemetry.py
droniada23/common/mavic/: mavic_pb2.py  mavic_pb2.pyi  mavic_pb2_grpc.py
droniada23/common/utils/: geo.py  project.py
droniada23/drzewko/actors/: detector_actor.py
droniada23_drzewko/: main.py  run_drzewko.py
droniada23_drzewko/actors/: camera_actor.py  detector_actor.py  firebase_actor.py  logger_actor.py  telem_actor.py  viewer_actor.py
droniada23_drzewko/conf/: config.yaml
droniada23_drzewko/conf/telemetry/: mavic.yaml
droniada23_drzewko/data/: stamped_frame.py
droniada23_drzewko/models/: __init__.py
droniada23_drzewko/secrets/: __init__.py
droniada23_drzewko/utils/: project.py
